Fixed a display issue on mobile display with my top parallax image.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,14 +11,20 @@ body{
     font-style: italic;
 }
 
+/* google fonts: */
+/* font-family: 'Audiowide', cursive;
+font-family: 'Ubuntu Mono', monospace;
+font-family: 'Monofett', cursive;
+ */
+
 /* fade in for my picture, logo, and name text */
 
 #logo-image, #mainPicture {
--webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
--moz-animation: fadein 2s; /* Firefox < 16 */
- -ms-animation: fadein 2s; /* Internet Explorer */
-  -o-animation: fadein 2s; /* Opera < 12.1 */
-     animation: fadein 2s;
+-webkit-animation: fadein 2.5s; /* Safari, Chrome and Opera > 12.1 */
+-moz-animation: fadein 2.5s; /* Firefox < 16 */
+ -ms-animation: fadein 2.5s; /* Internet Explorer */
+  -o-animation: fadein 2.5s; /* Opera < 12.1 */
+     animation: fadein 2.5s;
 }
 
 #firstName {
@@ -31,11 +37,11 @@ body{
 
 
 #lastName {
-    -webkit-animation: fadein 2s; 
-    -moz-animation: fadein 2s; 
-     -ms-animation: fadein 2s; 
-      -o-animation: fadein 2s; 
-         animation: fadein 2s;
+    -webkit-animation: fadein 2.5s; 
+    -moz-animation: fadein 2.5s; 
+     -ms-animation: fadein 2.5s; 
+      -o-animation: fadein 2.5s; 
+         animation: fadein 2.5s;
 }
 
 
@@ -50,6 +56,7 @@ body{
     word-spacing: 3em;
 }
 
+/* fade-in animation with cross-browser support */
 @keyframes fadein {
 from { opacity: 0; }
 to   { opacity: 1; }
@@ -100,13 +107,17 @@ to   { opacity: 1; }
 }
 
 #mainPicture {
-    margin-top: 25vh;
+    margin-top: 20vh;
     width: 15%;
 }
 
 #intro {
     margin-top: 50px;
+}
 
+#mainText {
+    /* font-family: 'Audiowide', cursive;  */
+    font-family: 'Ubuntu Mono', monospace;
 }
 
 /* typewriter effect for title below my name */
@@ -206,6 +217,10 @@ video::-webkit-media-controls {
     color: #1565c0 !important;
 }
 
+.page-footer {
+    color: #8F9AA7;
+}
+
 
 /* Responsiveness for changes in screen size with media queries */
 
@@ -223,9 +238,14 @@ video::-webkit-media-controls {
         margin-top: 15px;
     }
 
+    #mainPicture {
+        margin-top: 17vh;
+        width: 15%;
+    }
+
     #landing{
         max-width: 100%;
-        height: 500px;
+        height: 100vh;
         background-image: url("../images/underwater.jpg");
         background-size: 640px;
         background-position: sticky;
@@ -251,17 +271,17 @@ video::-webkit-media-controls {
 
 
     .mobileGap {
-        margin-top: 25px;
+        margin-top: 15px;
     }
 
     #mainPicture {
-        margin-top: 18vh;
+        margin-top: 15vh;
         width: 15%;
     }
 
     #landing{
         max-width: 100%;
-        height: 500px;
+        height: 100vh;
         background-image: url();
         background-size: 380px;
         background-position: sticky;
@@ -271,7 +291,7 @@ video::-webkit-media-controls {
     }
 
     #logo-image {
-        width: 45vw;
+        width: 55vw;
     }
 
     .parallax-container {
